src/native/libs/Evergreen.Graphics/egImGui.h

typedef int EgImGuiBool;
typedef struct {
	void* internal;
} EgImGuiContext;
typedef struct {
    void* internal;
} EgImFont;
typedef struct {
    float x;
    float y;
} EgImGuiVector2;
enum EgImGuiWindowFlags
{
    EgImGuiWindowFlags_None = 0,
    EgImGuiWindowFlags_NoTitleBar = 1 << 0,   
    EgImGuiWindowFlags_NoResize = 1 << 1,   
    EgImGuiWindowFlags_NoMove = 1 << 2,   
    EgImGuiWindowFlags_NoScrollbar = 1 << 3,   
    EgImGuiWindowFlags_NoScrollWithMouse = 1 << 4,   
    EgImGuiWindowFlags_NoCollapse = 1 << 5,   
    EgImGuiWindowFlags_AlwaysAutoResize = 1 << 6,   
    EgImGuiWindowFlags_NoBackground = 1 << 7,   
    EgImGuiWindowFlags_NoMouseInputs = 1 << 9,   
    EgImGuiWindowFlags_MenuBar = 1 << 10,  
    EgImGuiWindowFlags_HorizontalScrollbar = 1 << 11,  
    EgImGuiWindowFlags_NoFocusOnAppearing = 1 << 12,  
    EgImGuiWindowFlags_NoBringToFrontOnFocus = 1 << 13,  
    EgImGuiWindowFlags_AlwaysVerticalScrollbar = 1 << 14,  
    EgImGuiWindowFlags_AlwaysHorizontalScrollbar = 1 << 15,  
    EgImGuiWindowFlags_AlwaysUseWindowPadding = 1 << 16,  
    EgImGuiWindowFlags_NoNavInputs = 1 << 18,  
    EgImGuiWindowFlags_NoNavFocus = 1 << 19,  
    EgImGuiWindowFlags_UnsavedDocument = 1 << 20,  
    EgImGuiWindowFlags_NoNav = EgImGuiWindowFlags_NoNavInputs | EgImGuiWindowFlags_NoNavFocus,
    EgImGuiWindowFlags_NoDecoration = EgImGuiWindowFlags_NoTitleBar | EgImGuiWindowFlags_NoResize | EgImGuiWindowFlags_NoScrollbar | EgImGuiWindowFlags_NoCollapse,
    EgImGuiWindowFlags_NoInputs = EgImGuiWindowFlags_NoMouseInputs | EgImGuiWindowFlags_NoNavInputs | EgImGuiWindowFlags_NoNavFocus
};
enum EgImGuiChildFlags
{
    EgImGuiChildFlags_None = 0,
    EgImGuiChildFlags_Border = 1 << 0,   
    EgImGuiChildFlags_AlwaysUseWindowPadding = 1 << 1,   
    EgImGuiChildFlags_ResizeX = 1 << 2,   
    EgImGuiChildFlags_ResizeY = 1 << 3,   
    EgImGuiChildFlags_AutoResizeX = 1 << 4,   
    EgImGuiChildFlags_AutoResizeY = 1 << 5,   
    EgImGuiChildFlags_AlwaysAutoResize = 1 << 6,   
    EgImGuiChildFlags_FrameStyle = 1 << 7,   
};
enum EgImGuiInputTextFlags
{
    EgImGuiInputTextFlags_None = 0,
    EgImGuiInputTextFlags_CharsDecimal = 1 << 0,   
    EgImGuiInputTextFlags_CharsHexadecimal = 1 << 1,   
    EgImGuiInputTextFlags_CharsUppercase = 1 << 2,   
    EgImGuiInputTextFlags_CharsNoBlank = 1 << 3,   
    EgImGuiInputTextFlags_AutoSelectAll = 1 << 4,   
    EgImGuiInputTextFlags_EnterReturnsTrue = 1 << 5,   
    EgImGuiInputTextFlags_CallbackCompletion = 1 << 6,   
    EgImGuiInputTextFlags_CallbackHistory = 1 << 7,   
    EgImGuiInputTextFlags_CallbackAlways = 1 << 8,   
    EgImGuiInputTextFlags_CallbackCharFilter = 1 << 9,   
    EgImGuiInputTextFlags_AllowTabInput = 1 << 10,  
    EgImGuiInputTextFlags_CtrlEnterForNewLine = 1 << 11,  
    EgImGuiInputTextFlags_NoHorizontalScroll = 1 << 12,  
    EgImGuiInputTextFlags_AlwaysOverwrite = 1 << 13,  
    EgImGuiInputTextFlags_ReadOnly = 1 << 14,  
    EgImGuiInputTextFlags_Password = 1 << 15,  
    EgImGuiInputTextFlags_NoUndoRedo = 1 << 16,  
    EgImGuiInputTextFlags_CharsScientific = 1 << 17,  
    EgImGuiInputTextFlags_CallbackResize = 1 << 18,  
    EgImGuiInputTextFlags_CallbackEdit = 1 << 19,  
    EgImGuiInputTextFlags_EscapeClearsAll = 1 << 20,  
};
typedef struct {
    void* Ctx;            
    EgImGuiInputTextFlags EventFlag;      
    EgImGuiInputTextFlags Flags;          
    void* UserData;       
    unsigned int             EventChar;      
    int            EventKey;       
    char* Buf;            
    int                 BufTextLen;     
    int                 BufSize;        
    bool                BufDirty;       
    int                 CursorPos;      
    int                 SelectionStart; 
    int                 SelectionEnd;   
} EgImGui_InputTextCallbackData;
    EG_EXPORT EgImGuiContext egImGuiCreateContextVulkan(
        EgWindow window,
        VkInstance instance,
        VkPhysicalDevice physicalDevice,
        VkDevice device,
        unsigned int graphicsQueueFamilyIndex,
        VkQueue graphicsQueue,
        unsigned int minImageCount,
        unsigned int imageCount,
        VkRenderPass renderPass,
        void(*callbackCheckVulkanInitialization)(VkResult)
    );
    EG_EXPORT void egImGuiDestroyContextVulkan(EgImGuiContext context);
    EG_EXPORT void egImGuiSetScaleFactor(EgImGuiContext context, float scaleFactor);
    EG_EXPORT float egImGuiGetScaleFactor(EgImGuiContext context);
    EG_EXPORT void egImGuiSetMouseCursorChange(EgImGuiContext context, EgImGuiBool value);
    EG_EXPORT unsigned int* egImGui_GetGlyphRangesAll();
    EG_EXPORT unsigned int* egImGui_GetGlyphRangesDefault();
    EG_EXPORT unsigned int* egImGui_GetGlyphRangesGreek();
    EG_EXPORT unsigned int* egImGui_GetGlyphRangesIcon();
    EG_EXPORT unsigned int* egImGui_GetGlyphRangesEmoji();
    EG_EXPORT EgImFont egImGuiAddFontDefault(EgImGuiContext context);
    EG_EXPORT EgImFont egImGuiAddFont(EgImGuiContext context, unsigned char* fontData, int fontDataSize, float pixelSize, unsigned int* ranges);
    EG_EXPORT EgImFont egImGuiMergeFonts(EgImGuiContext context, unsigned char** multipleFontData, int* fontDataSizes, float* pixelSizes, unsigned int** multipleRanges, int length);
    EG_EXPORT void egImGuiPushFont(EgImGuiContext context, EgImFont font);
    EG_EXPORT void egImGuiPopFont(EgImGuiContext context);
    EG_EXPORT void egImGuiUploadFontsVulkan(EgImGuiContext context);
    EG_EXPORT void egImGuiSetDarkMode(EgImGuiContext context);
    EG_EXPORT void egImGuiSetClassicMode(EgImGuiContext context);
    EG_EXPORT void egImGuiNewFrameVulkan(EgImGuiContext context);
    EG_EXPORT void egImGuiEndFrame(EgImGuiContext context);
    EG_EXPORT void egImGuiDrawVulkan(EgImGuiContext context, VkCommandBuffer commandBuffer, VkPipeline pipeline);
    EG_EXPORT void egImGuiSetCurrentContext(EgImGuiContext context);
    EG_EXPORT void egImGuiShowDemoWindow(EgImGuiContext context);
    EG_EXPORT EgImGuiBool egImGuiIsMouseDragging(EgImGuiContext context);
    EG_EXPORT EgImGuiVector2 egImGuiGetMainViewportSize(EgImGuiContext context);
    EG_EXPORT EgImGuiBool egImGuiBegin(EgImGuiContext context, bool& isOpen, bool hideCloseButton, const char* title, EgImGuiWindowFlags flags);
    EG_EXPORT void egImGuiEnd(EgImGuiContext context);
    EG_EXPORT EgImGuiBool egImGui_BeginPopupModal(EgImGuiContext context, bool& isOpen, bool hideCloseButton, const char* title, EgImGuiWindowFlags flags);
    EG_EXPORT void egImGui_EndPopup(EgImGuiContext context);
    EG_EXPORT void egImGui_OpenPopup(EgImGuiContext context, const char* id);
    EG_EXPORT void egImGuiBeginDisabled(EgImGuiContext context, bool isDisabled);
    EG_EXPORT void egImGuiEndDisabled(EgImGuiContext context);
    EG_EXPORT EgImGuiBool egImGuiBeginChild(EgImGuiContext context, unsigned int id, EgImGuiVector2 size, EgImGuiChildFlags childFlags);
    EG_EXPORT void egImGuiEndChild(EgImGuiContext context);
    EG_EXPORT void egImGuiPushId(EgImGuiContext context, int id);
    EG_EXPORT void egImGuiPopId(EgImGuiContext context);
    EG_EXPORT void egImGuiPushItemWidth(EgImGuiContext context, float width);
    EG_EXPORT void egImGuiPopItemWidth(EgImGuiContext context);
    EG_EXPORT void egImGuiSetCursorPositionX(EgImGuiContext context, float x);
    EG_EXPORT void egImGuiSetCursorPositionY(EgImGuiContext context, float y);
    EG_EXPORT float egImGuiGetCursorPositionX(EgImGuiContext context);
    EG_EXPORT float egImGuiGetCursorPositionY(EgImGuiContext context);
    EG_EXPORT EgImGuiVector2 egImGuiGetItemRectSize(EgImGuiContext context);
    EG_EXPORT float egImGuiCalculateItemWidth(EgImGuiContext context);
    EG_EXPORT void egImGuiSetNextWindowBackgroundAlpha(EgImGuiContext context, float alpha);
    EG_EXPORT void egImGuiSetNextWindowPosition(EgImGuiContext context, EgImGuiVector2 position);
    EG_EXPORT void egImGuiSetNextWindowPositionWithPivot(EgImGuiContext context, EgImGuiVector2 position, EgImGuiVector2 pivot);
    EG_EXPORT EgImGuiBool egImGuiInputText(EgImGuiContext context, const char* label, char* buffer, size_t bufferSize, EgImGuiInputTextFlags flags, int(*callback)(EgImGui_InputTextCallbackData));