src/managed/Graphics/UI/Backend/ImGui/Interop/Methods.cs

using System.Runtime.InteropServices;

namespace Evergreen.Graphics.UI.Backend.ImGui.Interop;

public static unsafe partial class Methods
{
    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern EgImGuiContext egImGuiCreateContextVulkan([NativeTypeName("EgWindow")] Evergreen.Graphics.Window.Backend.Interop.EgWindow window, [NativeTypeName("VkInstance")] TerraFX.Interop.Vulkan.VkInstance instance, [NativeTypeName("VkPhysicalDevice")] TerraFX.Interop.Vulkan.VkPhysicalDevice physicalDevice, [NativeTypeName("VkDevice")] TerraFX.Interop.Vulkan.VkDevice device, [NativeTypeName("unsigned int")] uint graphicsQueueFamilyIndex, [NativeTypeName("VkQueue")] TerraFX.Interop.Vulkan.VkQueue graphicsQueue, [NativeTypeName("unsigned int")] uint minImageCount, [NativeTypeName("unsigned int")] uint imageCount, [NativeTypeName("VkRenderPass")] TerraFX.Interop.Vulkan.VkRenderPass renderPass, [NativeTypeName("void (*)(VkResult)")] delegate* unmanaged[Cdecl]<TerraFX.Interop.Vulkan.VkResult, void> callbackCheckVulkanInitialization);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egImGuiDestroyContextVulkan(EgImGuiContext context);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egImGuiSetScaleFactor(EgImGuiContext context, float scaleFactor);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern float egImGuiGetScaleFactor(EgImGuiContext context);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egImGuiSetMouseCursorChange(EgImGuiContext context, [NativeTypeName("EgImGuiBool")] System.Boolean value);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    [return: NativeTypeName("unsigned int *")]
    public static extern uint* egImGui_GetGlyphRangesAll();

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    [return: NativeTypeName("unsigned int *")]
    public static extern uint* egImGui_GetGlyphRangesDefault();

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    [return: NativeTypeName("unsigned int *")]
    public static extern uint* egImGui_GetGlyphRangesGreek();

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    [return: NativeTypeName("unsigned int *")]
    public static extern uint* egImGui_GetGlyphRangesIcon();

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    [return: NativeTypeName("unsigned int *")]
    public static extern uint* egImGui_GetGlyphRangesEmoji();

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern EgImFont egImGuiAddFontDefault(EgImGuiContext context);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern EgImFont egImGuiAddFont(EgImGuiContext context, [NativeTypeName("unsigned char *")] byte* fontData, int fontDataSize, float pixelSize, [NativeTypeName("unsigned int *")] uint* ranges);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern EgImFont egImGuiMergeFonts(EgImGuiContext context, [NativeTypeName("unsigned char **")] byte** multipleFontData, int* fontDataSizes, float* pixelSizes, [NativeTypeName("unsigned int **")] uint** multipleRanges, int length);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egImGuiPushFont(EgImGuiContext context, EgImFont font);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egImGuiPopFont(EgImGuiContext context);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egImGuiUploadFontsVulkan(EgImGuiContext context);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egImGuiSetDarkMode(EgImGuiContext context);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egImGuiSetClassicMode(EgImGuiContext context);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egImGuiNewFrameVulkan(EgImGuiContext context);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egImGuiEndFrame(EgImGuiContext context);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egImGuiDrawVulkan(EgImGuiContext context, [NativeTypeName("VkCommandBuffer")] TerraFX.Interop.Vulkan.VkCommandBuffer commandBuffer, [NativeTypeName("VkPipeline")] TerraFX.Interop.Vulkan.VkPipeline pipeline);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egImGuiSetCurrentContext(EgImGuiContext context);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egImGuiShowDemoWindow(EgImGuiContext context);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    [return: NativeTypeName("EgImGuiBool")]
    public static extern System.Boolean egImGuiIsMouseDragging(EgImGuiContext context);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    [return: NativeTypeName("EgImGuiVector2")]
    public static extern System.Numerics.Vector2 egImGuiGetMainViewportSize(EgImGuiContext context);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    [return: NativeTypeName("EgImGuiBool")]
    public static extern System.Boolean egImGuiBegin(EgImGuiContext context, [NativeTypeName("bool &")] bool* isOpen, [NativeTypeName("bool")] byte hideCloseButton, [NativeTypeName("const char *")] sbyte* title, EgImGuiWindowFlags flags);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egImGuiEnd(EgImGuiContext context);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    [return: NativeTypeName("EgImGuiBool")]
    public static extern System.Boolean egImGui_BeginPopupModal(EgImGuiContext context, [NativeTypeName("bool &")] bool* isOpen, [NativeTypeName("bool")] byte hideCloseButton, [NativeTypeName("const char *")] sbyte* title, EgImGuiWindowFlags flags);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egImGui_EndPopup(EgImGuiContext context);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egImGui_OpenPopup(EgImGuiContext context, [NativeTypeName("const char *")] sbyte* id);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egImGuiBeginDisabled(EgImGuiContext context, [NativeTypeName("bool")] byte isDisabled);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egImGuiEndDisabled(EgImGuiContext context);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    [return: NativeTypeName("EgImGuiBool")]
    public static extern System.Boolean egImGuiBeginChild(EgImGuiContext context, [NativeTypeName("unsigned int")] uint id, [NativeTypeName("EgImGuiVector2")] System.Numerics.Vector2 size, EgImGuiChildFlags childFlags);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egImGuiEndChild(EgImGuiContext context);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egImGuiPushId(EgImGuiContext context, int id);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egImGuiPopId(EgImGuiContext context);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egImGuiPushItemWidth(EgImGuiContext context, float width);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egImGuiPopItemWidth(EgImGuiContext context);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egImGuiSetCursorPositionX(EgImGuiContext context, float x);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egImGuiSetCursorPositionY(EgImGuiContext context, float y);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern float egImGuiGetCursorPositionX(EgImGuiContext context);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern float egImGuiGetCursorPositionY(EgImGuiContext context);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    [return: NativeTypeName("EgImGuiVector2")]
    public static extern System.Numerics.Vector2 egImGuiGetItemRectSize(EgImGuiContext context);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern float egImGuiCalculateItemWidth(EgImGuiContext context);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egImGuiSetNextWindowBackgroundAlpha(EgImGuiContext context, float alpha);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egImGuiSetNextWindowPosition(EgImGuiContext context, [NativeTypeName("EgImGuiVector2")] System.Numerics.Vector2 position);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egImGuiSetNextWindowPositionWithPivot(EgImGuiContext context, [NativeTypeName("EgImGuiVector2")] System.Numerics.Vector2 position, [NativeTypeName("EgImGuiVector2")] System.Numerics.Vector2 pivot);
